<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team.transport.transport.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">


        <TextView
            android:id="@+id/textView2"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/textview_main" />

        <RadioGroup
            android:id="@+id/ChoixTransport"
            android:layout_width="match_parent"
            android:layout_height="364dp">


            <RadioButton
                android:id="@+id/radioButtonPied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/choix_1" />

            <RadioButton
                android:id="@+id/radioButtonVelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/choix_2" />

            <RadioButton
                android:id="@+id/radioButtonVoiture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/choix_3" />

            <RadioButton
                android:id="@+id/radioButtonBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/choix_4" />

            <RadioButton
                android:id="@+id/radioButtonTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/choix_5" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <Button
            android:id="@+id/button_main"
            style="@android:style/Widget.Holo.Button"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:text="@string/button_main" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>
